Begins Html skeleton and css basics

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,30 @@
     <title>ToDoList</title>
 </head>
 <body>
-    
+    <nav class="header">Get it Done</nav>
+    <div class="page-container">
+        <div class="sidebar">
+            <ul>
+               <li><a href="">Today</a></li> 
+               <li><a href="">Next 7 days</a></li>
+               <li><a href="">Anytime</a></li>
+            </ul>
+            <div class="categories">
+                <div class="category">
+                    Home
+                </div>
+                <div class="category">
+                    Hobby
+                </div>
+                <div class="category">
+                    Work
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            
+        </div>
+
+    </div>
 </body>
 </html>
